--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -3,7 +3,7 @@
 project_id = "steamgriddb-csv-manager"
 
 [api]
-enabled = true
+# enabled = true
 # Port to use for the API URL.
 port = 54321
 # Schemas to expose in your API. Tables, views and stored procedures in this schema will get API endpoints.
@@ -15,7 +15,7 @@ extra_search_path = ["public", "extensions"]
 max_rows = 1000
 
 [db]
-enabled = true
+# enabled = true
 # Port to use for the local database URL.
 port = 54322
 # Port used by db diff command to initialize the shadow database.
@@ -24,14 +24,14 @@ shadow_port = 54320
 major_version = 15
 
 [realtime]
-enabled = true
+# enabled = true
 # Bind realtime via either IPv4 or IPv6. (default: IPv6)
 ip_version = "IPv6"
 # The maximum length in bytes of HTTP request headers. (default: 4096)
 max_header_length = 4096
 
 [studio]
-enabled = true
+# enabled = true
 # Port to use for Supabase Studio.
 port = 54323
 # External URL of the API server that frontend connects to.
@@ -40,7 +40,7 @@ api_url = "http://127.0.0.1:54321"
 # Email testing server. Emails sent with the local dev setup are not actually sent - rather, they
 # are monitored, and you can view the emails that would have been sent from the web interface.
 [inbucket]
-enabled = true
+# enabled = true
 # Port to use for the email testing server web interface.
 port = 54324
 # Uncomment to expose additional ports for testing user applications that send emails.
@@ -48,12 +48,12 @@ port = 54324
 # pop3_port = 54326
 
 [storage]
-enabled = true
+# enabled = true
 # The maximum file size allowed (e.g. "5MB", "500KB").
 file_size_limit = "50MiB"
 
 [auth]
-enabled = true
+# enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
 # in emails.
 site_url = "http://127.0.0.1:3000"
